--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
         <div class="preloader-inner position-relative">
             <div class="preloader-circle"></div>
             <div class="preloader-img pere-text">
-                <img src="assets/img/logo/logo.png" alt="">
+                <img src="{% static 'img/logo/logo.png' %}" alt="">
             </div>
         </div>
     </div>
@@ -67,12 +67,12 @@
                         <!-- Logo -->
                         <div class="col-xl-3 col-lg-3 col-md-3 d-none d-md-block">
                             <div class="logo">
-                                <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                                <a href="index.html"><img src="{% static 'img/logo/logo.png' %}" alt=""></a>
                             </div>
                         </div>
                         <div class="col-xl-9 col-lg-9 col-md-9">
                             <div class="header-banner f-right ">
-                                <img src="assets/img/gallery/header_card.png" alt="">
+                                <img src="{% static 'img/gallery/header_card.png' %}" alt="">
                             </div>
                         </div>
                     </div>
@@ -84,7 +84,7 @@
                         <div class="col-xl-8 col-lg-8 col-md-12 header-flex">
                             <!-- sticky -->
                             <div class="sticky-logo">
-                                <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                                <a href="index.html"><img src="{% static 'img/logo/logo.png' %}" alt=""></a>
                             </div>
                             <!-- Main-menu -->
                             <div class="main-menu d-none d-md-block">
@@ -998,7 +998,7 @@
                                         </div> 
                                         <div class="weekly3-single">
                                             <div class="weekly3-img">
-                                                <img src="assets/img/gallery/weekly2News2.png" alt="">
+                                                <img src="{% static 'img/gallery/weekly2News2.png' %}" alt="">
                                             </div>
                                             <div class="weekly3-caption">
                                                 <h4><a href="latest_news.html">What to Expect From the 2020 Oscar Nomin ations</a></h4>
@@ -1021,7 +1021,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-10 col-md-10">
                     <div class="banner-one">
-                        <img src="assets/img/gallery/body_card3.png" alt="">
+                        <img src="{% static 'img/gallery/body_card3.png' %}" alt="">
                     </div>
                 </div>
             </div>
@@ -1040,7 +1040,7 @@
                             <div class="single-footer-caption mb-30">
                                 <!-- logo -->
                                 <div class="footer-logo">
-                                    <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
+                                    <a href="index.html"><img src="{% static 'img/logo/logo2_footer.png' %}" alt=""></a>
                                 </div>
                                 <div class="footer-tittle">
                                     <div class="footer-pera">
@@ -1060,7 +1060,7 @@
                             <!-- Popular post -->
                             <div class="whats-right-single mb-20">
                                 <div class="whats-right-img">
-                                    <img src="assets/img/gallery/footer_post1.png" alt="">
+                                    <img src="{% static 'img/gallery/footer_post1.png' %}" alt="">
                                 </div>
                                 <div class="whats-right-cap">
                                     <h4><a href="latest_news.html">Scarlett’s disappointment at latest accolade</a></h4>
@@ -1070,7 +1070,7 @@
                             <!-- Popular post -->
                             <div class="whats-right-single mb-20">
                                 <div class="whats-right-img">
-                                    <img src="assets/img/gallery/footer_post2.png" alt="">
+                                    <img src="{% static 'img/gallery/footer_post2.png' %}" alt="">
                                 </div>
                                 <div class="whats-right-cap">
                                     <h4><a href="latest_news.html">Scarlett’s disappointment at latest accolade</a></h4>
@@ -1080,7 +1080,7 @@
                             <!-- Popular post -->
                             <div class="whats-right-single mb-20">
                                 <div class="whats-right-img">
-                                    <img src="assets/img/gallery/footer_post3.png" alt="">
+                                    <img src="{% static 'img/gallery/footer_post3.png' %}" alt="">
                                 </div>
                                 <div class="whats-right-cap">
                                     <h4><a href="latest_news.html">Scarlett’s disappointment at latest accolade</a></h4>
@@ -1092,7 +1092,7 @@
                     <div class="col-xl-3 col-lg-3 col-md-5 col-sm-7">
                         <div class="single-footer-caption mb-50">
                             <div class="banner">
-                                <img src="assets/img/gallery/body_card4.png" alt="">
+                                <img src="{% static 'img/gallery/body_card4.png' %}" alt="">
                             </div>
                         </div>
                     </div>
@@ -1106,9 +1106,7 @@
                     <div class="row d-flex align-items-center">
                         <div class="col-xl-12 ">
                             <div class="footer-copy-right text-center">
-                                <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+                                <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved</p>
                             </div>
                         </div>
                     </div>
